--- a/test.html
+++ b/test.html
@@ -1,8 +1,7 @@
 <html>
 <body>
   <h1>Viewblock Address</h1>
-    <div>{{address}}</div>
-    <br>
+    <!--<div>{{address}}</div>-->
     <hr>
     Hash Value of Latest Transaction:
     <div>{{hash}}</div>
